WEB-7517 Simplified the configuration so no need for MetricsConfig or RootConfig. Spring configuration supplied by XML.